API 0.3.3 Controllers for creating and deleting; User creation; documentation
